--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testImplementation 'com.codeborne:selenide:5.6.1'
     testImplementation 'io.github.bonigarcia:webdrivermanager:3.8.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
